@@ -293,6 +293,8 @@ extern void tbblue_copper_handle_vsync(void);
 
 extern z80_bit tbblue_deny_turbo_rom;
 extern int tbblue_deny_turbo_rom_max_allowed;
+extern z80_bit tbblue_deny_turbo_everywhere;
+extern int tbblue_deny_turbo_everywhere_max_allowed;
 extern void tbblue_set_emulator_setting_turbo(void);
 
 
